--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-jest": "^20.0.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "body-parser": "^1.0.1",
+    "enzyme": "^2.9.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "jest": "^20.0.4",
     "react-scripts": "1.0.10",
-    "serve": "^3.1.0"
+    "react-test-renderer": "^15.6.1",
+    "serve": "^3.1.0",
+    "sinon": "^3.0.0"
   },
   "dependencies": {
     "autoprefixer": "^7.1.2",
@@ -44,7 +49,14 @@
   "scripts": {
     "start": "webpack-dev-server --env.dev --open --watch --progress --colors",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "moduleFileExtensions": ["js", "jsx"],
+    "moduleDirectories": ["node_modules"],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
+    }
   }
 }
